[IOTDB-2593] Fix cannot insert data using JDK17