@@ -176,6 +176,7 @@ if [ "${version_arr[0]}" = "1" ] ; then
             IOTDB_JMX_OPTS="$IOTDB_JMX_OPTS -Xloggc:${IOTDB_HOME}/logs/gc.log  -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintGCApplicationStoppedTime -XX:+PrintPromotionFailure -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=10M"
         fi
     fi
+    illegal_access_params=""
 else
     #JDK 11 and others
     MAJOR_VERSION=${version_arr[0]}
@@ -189,6 +190,19 @@ else
             IOTDB_JMX_OPTS="$IOTDB_JMX_OPTS -Xlog:gc=info,heap*=info,age*=info,safepoint=info,promotion*=info:file=${IOTDB_HOME}/logs/gc.log:time,uptime,pid,tid,level:filecount=10,filesize=10485760"
         fi
     fi
+    # Add argLine for Java 16 and above, due to [JEP 396: Strongly Encapsulate JDK Internals by Default] (https://openjdk.java.net/jeps/396)
+    illegal_access_params="--illegal-access=permit"
+    illegal_access_params="$illegal_access_params --add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-opens=java.base/java.lang=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-opens=java.base/java.util=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-opens=java.base/java.nio=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-opens=java.base/java.io=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-opens=java.base/java.net=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
+    illegal_access_params="$illegal_access_params --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
 fi
 
 
